# Appflowy-MCP

./: .gitignore  README.md  main.py  pyproject.toml
.agents/skills/appflowy-sdk/: SKILL.md
src/: models.py
